# bids2afniqcjson

./: README.md  pyproject.toml
src/bids2afniqcjson/: __init__.py  main.py  models.py
