[project]
name = "bids2afniqcjson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Sadil", email = "psadil@gmail.com" },
    { name = "Jason Kai", email = "jason.kai@childmind.org" },
]
requires-python = ">=3.12"
dependencies = [
    "bids2table[s3]>=2.1.0",
    "polars>=1.31.0",
    "templateflow>=24.2.2",
]

[project.scripts]
bids2afniqcjson = "bids2afniqcjson:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
